@@ -1,16 +1,14 @@
 package com.svetanis.agents.report;
 
-import static com.google.common.base.Preconditions.checkNotNull;
-import static com.google.common.collect.ImmutableMap.copyOf;
+import static com.google.api.client.util.Preconditions.checkNotNull;
 
-import java.util.Map;
+import java.util.List;
 
 import com.google.adk.agents.LlmAgent;
 import com.google.adk.tools.AgentTool;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.svetanis.agents.base.AgentConfig;
 import com.svetanis.agents.base.AgentContext;
+import com.svetanis.agents.base.AppConfig;
 import com.svetanis.agents.base.LlmAgentProvider;
 import com.svetanis.agents.base.tools.SearchAgentToolProvider;
 
@@ -18,44 +16,62 @@ import jakarta.inject.Provider;
 
 public class ReportRootAgent implements Provider<LlmAgent> {
 
-  private static final String RRW_KEY = "report.root.writer";
-  private static final String RTR_KEY = "report.topic.researcher";
-  private static final String RCA_KEY = "report.content.analyst";
-  private static final String RAA_KEY = "report.research.coordinator";
+  private static final String RRW_KEY = "report.root";
+  private static final String RTR_KEY = "report.topic";
+  private static final String RCA_KEY = "report.content";
+  private static final String RAA_KEY = "report.research";
 
-  public ReportRootAgent(Map<String, AgentConfig> configs) {
-    this.configs = copyOf(checkNotNull(configs, "configs"));
+  public ReportRootAgent(AppConfig appConfig) {
+    this.appConfig = checkNotNull(appConfig, "appConfig");
   }
 
-  private final ImmutableMap<String, AgentConfig> configs;
-
+  private final AppConfig appConfig;
+  
   @Override
   public LlmAgent get() {
-    AgentTool assistant = AgentTool.create(researchAssistant(configs));
-    AgentContext ctx = AgentContext.build(configs.get(RRW_KEY), assistant);
+    AgentTool assistant = AgentTool.create(researchAssistant());
+    AgentContext ctx = AgentContext.builder()//
+        .withConfig(agentConfig(RRW_KEY))//
+        .withPlugins(appConfig.getPlugins())//
+        .withTools(assistant)//
+        .build();
     return new LlmAgentProvider(ctx).get();
   }
 
-  private LlmAgent researchAssistant(Map<String, AgentConfig> configs) {
-    LlmAgent search = webSearch(configs);
-    LlmAgent analyst = summarizer(configs);
-    AgentConfig config = configs.get(RAA_KEY);
-    AgentContext ctx =
-        AgentContext.builder() //
-            .withConfig(config) //
-            .withSubAgents(ImmutableList.of(search, analyst)) //
-            .build();
+  private LlmAgent researchAssistant() {
+    LlmAgent search = webSearch();
+    LlmAgent analyst = summarizer();
+    AgentConfig config = agentConfig(RAA_KEY);
+    AgentContext ctx = AgentContext.builder() //
+        .withConfig(config) //
+        .withPlugins(appConfig.getPlugins())//
+        .withSubAgents(List.of(search, analyst)) //
+        .build();
     return new LlmAgentProvider(ctx).get();
   }
 
-  private LlmAgent summarizer(Map<String, AgentConfig> configs) {
-    AgentContext ctx = AgentContext.build(configs.get(RCA_KEY));
+  private LlmAgent summarizer() {
+    AgentContext ctx = AgentContext.builder()//
+        .withConfig(agentConfig(RCA_KEY))//
+        .withPlugins(appConfig.getPlugins())//
+        .build();
     return new LlmAgentProvider(ctx).get();
   }
 
-  private LlmAgent webSearch(Map<String, AgentConfig> configs) {
-    AgentTool search = new SearchAgentToolProvider(configs).get();
-    AgentContext ctx = AgentContext.build(configs.get(RTR_KEY), search);
+  private LlmAgent webSearch() {
+    AgentTool search = new SearchAgentToolProvider(appConfig).get();
+    AgentContext ctx = AgentContext.builder()//
+        .withConfig(agentConfig(RTR_KEY))//
+        .withTools(search)//
+        .withPlugins(appConfig.getPlugins())//
+        .build();
     return new LlmAgentProvider(ctx).get();
   }
+  
+
+  private AgentConfig agentConfig(String key) {
+    String agentKey = appConfig.getProperties().get(key).trim();
+    return appConfig.getAgentConfigs().get(agentKey);
+  }
+
 }
